sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:3: error: not found: value n
  n=getValuesCount()
  ^AlgBubbleSort1:4: error: not found: value n
  for(i <- 0 to n-2){
                ^