sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  n=getValuesCount()
  for(i <- 0 to n-2){
    
    for(j <- i +1 to n-1){
      
      if(isSmaller(j-1,j))
      	swap(j,j-1)
    }
  }
}